--- a/CustomTools.Test/CustomTools.Test.csproj
+++ b/CustomTools.Test/CustomTools.Test.csproj
@@ -47,8 +47,8 @@
     <Reference Include="FastMember.Signed, Version=1.3.0.0, Culture=neutral, PublicKeyToken=9e8f22703bef9a29, processorArchitecture=MSIL">
       <HintPath>..\packages\FastMember.Signed.1.3.0\lib\net45\FastMember.Signed.dll</HintPath>
     </Reference>
-    <Reference Include="Hummingbird.TestFramework, Version=1.2.121.2, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Hummingbird.TestFramework.1.2.121.2-prerelease\lib\net46\Hummingbird.TestFramework.dll</HintPath>
+    <Reference Include="Hummingbird.TestFramework, Version=1.2.125.2, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Hummingbird.TestFramework.1.2.125.2\lib\net46\Hummingbird.TestFramework.dll</HintPath>
     </Reference>
     <Reference Include="Hummingbird.UI, Version=1.1.1209.1, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Hummingbird.UI.1.1.1209.1\lib\net45\Hummingbird.UI.dll</HintPath>
