--- a/CustomTools.Test/packages.config
+++ b/CustomTools.Test/packages.config
@@ -4,7 +4,7 @@
   <package id="DocumentFormat.OpenXml" version="2.8.1" targetFramework="net46" />
   <package id="ExcelNumberFormat" version="1.0.3" targetFramework="net46" />
   <package id="FastMember.Signed" version="1.3.0" targetFramework="net46" />
-  <package id="Hummingbird.TestFramework" version="1.2.121.2-prerelease" targetFramework="net46" />
+  <package id="Hummingbird.TestFramework" version="1.2.125.2" targetFramework="net46" />
   <package id="Hummingbird.UI" version="1.1.1209.1" targetFramework="net46" />
   <package id="Microsoft.OpenApi" version="1.1.2" targetFramework="net46" />
   <package id="Microsoft.OpenApi.Readers" version="1.1.2" targetFramework="net46" />
