--- a/Hummingbird.CustomTools/packages.config
+++ b/Hummingbird.CustomTools/packages.config
@@ -5,13 +5,13 @@
   <package id="DocumentFormat.OpenXml" version="2.8.1" targetFramework="net46" />
   <package id="ExcelNumberFormat" version="1.0.3" targetFramework="net46" />
   <package id="FastMember.Signed" version="1.3.0" targetFramework="net46" />
-  <package id="Hummingbird.TestFramework" version="1.1.1209.2-prerelease" targetFramework="net46" />
+  <package id="Hummingbird.TestFramework" version="1.2.125.2" targetFramework="net46" />
   <package id="Hummingbird.UI" version="1.1.1209.1" targetFramework="net46" />
   <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.3.0" targetFramework="net46" />
   <package id="Microsoft.IdentityModel.Logging" version="5.3.0" targetFramework="net46" />
   <package id="Microsoft.IdentityModel.Tokens" version="5.3.0" targetFramework="net46" />
-  <package id="Microsoft.OpenApi" version="1.1.1" targetFramework="net46" />
-  <package id="Microsoft.OpenApi.Readers" version="1.1.1" targetFramework="net46" />
+  <package id="Microsoft.OpenApi" version="1.1.2" targetFramework="net46" />
+  <package id="Microsoft.OpenApi.Readers" version="1.1.2" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net46" />
   <package id="SharpYaml" version="1.6.4" targetFramework="net46" />
   <package id="System.IdentityModel.Tokens.Jwt" version="5.3.0" targetFramework="net46" />
