--- a/CustomTools.Test/CustomTools.Test.csproj
+++ b/CustomTools.Test/CustomTools.Test.csproj
@@ -35,23 +35,26 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ClosedXML, Version=0.93.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\ClosedXML.0.93.1\lib\net46\ClosedXML.dll</HintPath>
+    <Reference Include="ClosedXML, Version=0.94.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\ClosedXML.0.94.2\lib\net46\ClosedXML.dll</HintPath>
     </Reference>
-    <Reference Include="DocumentFormat.OpenXml, Version=2.8.1.0, Culture=neutral, PublicKeyToken=8fb06cb64d019a17, processorArchitecture=MSIL">
-      <HintPath>..\packages\DocumentFormat.OpenXml.2.8.1\lib\net46\DocumentFormat.OpenXml.dll</HintPath>
+    <Reference Include="DocumentFormat.OpenXml, Version=2.9.1.0, Culture=neutral, PublicKeyToken=8fb06cb64d019a17, processorArchitecture=MSIL">
+      <HintPath>..\packages\DocumentFormat.OpenXml.2.9.1\lib\net46\DocumentFormat.OpenXml.dll</HintPath>
     </Reference>
-    <Reference Include="ExcelNumberFormat, Version=1.0.3.0, Culture=neutral, PublicKeyToken=23c6f5d73be07eca, processorArchitecture=MSIL">
-      <HintPath>..\packages\ExcelNumberFormat.1.0.3\lib\net20\ExcelNumberFormat.dll</HintPath>
+    <Reference Include="ExcelNumberFormat, Version=1.0.5.0, Culture=neutral, PublicKeyToken=23c6f5d73be07eca, processorArchitecture=MSIL">
+      <HintPath>..\packages\ExcelNumberFormat.1.0.5\lib\net20\ExcelNumberFormat.dll</HintPath>
+    </Reference>
+    <Reference Include="FastMember, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\FastMember.1.3.0\lib\net45\FastMember.dll</HintPath>
     </Reference>
     <Reference Include="FastMember.Signed, Version=1.3.0.0, Culture=neutral, PublicKeyToken=9e8f22703bef9a29, processorArchitecture=MSIL">
       <HintPath>..\packages\FastMember.Signed.1.3.0\lib\net45\FastMember.Signed.dll</HintPath>
     </Reference>
-    <Reference Include="Hummingbird.TestFramework, Version=1.2.125.2, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Hummingbird.TestFramework.1.2.125.2\lib\net46\Hummingbird.TestFramework.dll</HintPath>
+    <Reference Include="Hummingbird.TestFramework, Version=1.2.1094.2, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Hummingbird.TestFramework.1.2.1094.2-prerelease\lib\net46\Hummingbird.TestFramework.dll</HintPath>
     </Reference>
-    <Reference Include="Hummingbird.UI, Version=1.1.1209.1, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Hummingbird.UI.1.1.1209.1\lib\net45\Hummingbird.UI.dll</HintPath>
+    <Reference Include="Hummingbird.UI, Version=1.2.1088.2, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Hummingbird.UI.1.2.1088.2\lib\net45\Hummingbird.UI.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Build" />
     <Reference Include="Microsoft.Build.Framework" />
