--- a/CustomTools.Test/packages.config
+++ b/CustomTools.Test/packages.config
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ClosedXML" version="0.93.1" targetFramework="net46" />
-  <package id="DocumentFormat.OpenXml" version="2.8.1" targetFramework="net46" />
-  <package id="ExcelNumberFormat" version="1.0.3" targetFramework="net46" />
+  <package id="ClosedXML" version="0.94.2" targetFramework="net46" />
+  <package id="DocumentFormat.OpenXml" version="2.9.1" targetFramework="net46" />
+  <package id="ExcelNumberFormat" version="1.0.5" targetFramework="net46" />
+  <package id="FastMember" version="1.3.0" targetFramework="net46" />
   <package id="FastMember.Signed" version="1.3.0" targetFramework="net46" />
-  <package id="Hummingbird.TestFramework" version="1.2.125.2" targetFramework="net46" />
-  <package id="Hummingbird.UI" version="1.1.1209.1" targetFramework="net46" />
+  <package id="Hummingbird.TestFramework" version="1.2.1094.2-prerelease" targetFramework="net46" />
+  <package id="Hummingbird.UI" version="1.2.1088.2" targetFramework="net46" />
   <package id="Microsoft.OpenApi" version="1.1.2" targetFramework="net46" />
   <package id="Microsoft.OpenApi.Readers" version="1.1.2" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net46" />
