--- a/Hummingbird.CustomTools/Hummingbird.CustomTools.csproj
+++ b/Hummingbird.CustomTools/Hummingbird.CustomTools.csproj
@@ -31,29 +31,27 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ClosedXML, Version=0.93.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\ClosedXML.0.93.1\lib\net46\ClosedXML.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="ClosedXML, Version=0.94.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\ClosedXML.0.94.2\lib\net46\ClosedXML.dll</HintPath>
     </Reference>
-    <Reference Include="DocumentFormat.OpenXml, Version=2.8.1.0, Culture=neutral, PublicKeyToken=8fb06cb64d019a17, processorArchitecture=MSIL">
-      <HintPath>..\packages\DocumentFormat.OpenXml.2.8.1\lib\net46\DocumentFormat.OpenXml.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="DocumentFormat.OpenXml, Version=2.9.1.0, Culture=neutral, PublicKeyToken=8fb06cb64d019a17, processorArchitecture=MSIL">
+      <HintPath>..\packages\DocumentFormat.OpenXml.2.9.1\lib\net46\DocumentFormat.OpenXml.dll</HintPath>
     </Reference>
-    <Reference Include="ExcelNumberFormat, Version=1.0.3.0, Culture=neutral, PublicKeyToken=23c6f5d73be07eca, processorArchitecture=MSIL">
-      <HintPath>..\packages\ExcelNumberFormat.1.0.3\lib\net20\ExcelNumberFormat.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="ExcelNumberFormat, Version=1.0.5.0, Culture=neutral, PublicKeyToken=23c6f5d73be07eca, processorArchitecture=MSIL">
+      <HintPath>..\packages\ExcelNumberFormat.1.0.5\lib\net20\ExcelNumberFormat.dll</HintPath>
+    </Reference>
+    <Reference Include="FastMember, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\FastMember.1.3.0\lib\net45\FastMember.dll</HintPath>
     </Reference>
     <Reference Include="FastMember.Signed, Version=1.3.0.0, Culture=neutral, PublicKeyToken=9e8f22703bef9a29, processorArchitecture=MSIL">
       <HintPath>..\packages\FastMember.Signed.1.3.0\lib\net45\FastMember.Signed.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="Hummingbird.TestFramework, Version=1.2.125.2, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Hummingbird.TestFramework.1.2.125.2\lib\net46\Hummingbird.TestFramework.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="Hummingbird.TestFramework, Version=1.2.1094.2, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Hummingbird.TestFramework.1.2.1094.2-prerelease\lib\net46\Hummingbird.TestFramework.dll</HintPath>
     </Reference>
-    <Reference Include="Hummingbird.UI, Version=1.1.1209.1, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Hummingbird.UI.1.1.1209.1\lib\net45\Hummingbird.UI.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="Hummingbird.UI, Version=1.2.1088.2, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Hummingbird.UI.1.2.1088.2\lib\net45\Hummingbird.UI.dll</HintPath>
     </Reference>
     <Reference Include="ICSharpCode.AvalonEdit, Version=5.0.3.0, Culture=neutral, PublicKeyToken=9cc39be672370310, processorArchitecture=MSIL">
       <HintPath>..\packages\AvalonEdit.5.0.4\lib\Net40\ICSharpCode.AvalonEdit.dll</HintPath>
@@ -126,6 +124,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common.cs" />
+    <Compile Include="JwtNameToDescriptionConvertor.cs" />
+    <Compile Include="JwtUtility.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewDocFormatter.xaml.cs">
       <DependentUpon>ViewDocFormatter.xaml</DependentUpon>
