--- a/Hummingbird.CustomTools/packages.config
+++ b/Hummingbird.CustomTools/packages.config
@@ -1,12 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AvalonEdit" version="5.0.4" targetFramework="net46" />
-  <package id="ClosedXML" version="0.93.1" targetFramework="net46" />
-  <package id="DocumentFormat.OpenXml" version="2.8.1" targetFramework="net46" />
-  <package id="ExcelNumberFormat" version="1.0.3" targetFramework="net46" />
+  <package id="ClosedXML" version="0.94.2" targetFramework="net46" />
+  <package id="DocumentFormat.OpenXml" version="2.9.1" targetFramework="net46" />
+  <package id="ExcelNumberFormat" version="1.0.5" targetFramework="net46" />
+  <package id="FastMember" version="1.3.0" targetFramework="net46" />
   <package id="FastMember.Signed" version="1.3.0" targetFramework="net46" />
-  <package id="Hummingbird.TestFramework" version="1.2.125.2" targetFramework="net46" />
-  <package id="Hummingbird.UI" version="1.1.1209.1" targetFramework="net46" />
+  <package id="Hummingbird.TestFramework" version="1.2.1094.2-prerelease" targetFramework="net46" />
+  <package id="Hummingbird.UI" version="1.2.1088.2" targetFramework="net46" />
   <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.3.0" targetFramework="net46" />
   <package id="Microsoft.IdentityModel.Logging" version="5.3.0" targetFramework="net46" />
   <package id="Microsoft.IdentityModel.Tokens" version="5.3.0" targetFramework="net46" />
