--- a/Hummingbird.CustomTools/packages.config
+++ b/Hummingbird.CustomTools/packages.config
@@ -8,14 +8,18 @@
   <package id="FastMember.Signed" version="1.3.0" targetFramework="net46" />
   <package id="Hummingbird.TestFramework" version="1.2.1094.2-prerelease" targetFramework="net46" />
   <package id="Hummingbird.UI" version="1.2.1088.2" targetFramework="net46" />
-  <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.3.0" targetFramework="net46" />
-  <package id="Microsoft.IdentityModel.Logging" version="5.3.0" targetFramework="net46" />
-  <package id="Microsoft.IdentityModel.Tokens" version="5.3.0" targetFramework="net46" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.3.0" targetFramework="net46" requireReinstallation="true" />
+  <package id="Microsoft.IdentityModel.Logging" version="5.3.0" targetFramework="net46" requireReinstallation="true" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.3.0" targetFramework="net46" requireReinstallation="true" />
   <package id="Microsoft.OpenApi" version="1.1.2" targetFramework="net46" />
   <package id="Microsoft.OpenApi.Readers" version="1.1.2" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net46" />
   <package id="SharpYaml" version="1.6.4" targetFramework="net46" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="5.3.0" targetFramework="net46" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="5.3.0" targetFramework="net46" requireReinstallation="true" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net46" />
   <package id="System.IO.Packaging" version="4.5.0" targetFramework="net46" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net46" requireReinstallation="true" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net46" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net46" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net46" requireReinstallation="true" />
 </packages>
