--- a/CustomTools.Test/packages.config
+++ b/CustomTools.Test/packages.config
@@ -5,12 +5,16 @@
   <package id="ExcelNumberFormat" version="1.0.5" targetFramework="net46" />
   <package id="FastMember" version="1.3.0" targetFramework="net46" />
   <package id="FastMember.Signed" version="1.3.0" targetFramework="net46" />
-  <package id="Hummingbird.TestFramework" version="1.2.1094.2-prerelease" targetFramework="net46" />
-  <package id="Hummingbird.UI" version="1.2.1088.2" targetFramework="net46" />
+  <package id="Hummingbird.TestFramework" version="1.2.1100.4-prerelease" targetFramework="net461" />
+  <package id="Hummingbird.UI" version="1.2.1099.2" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.4.0" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Logging" version="5.4.0" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.4.0" targetFramework="net461" />
   <package id="Microsoft.OpenApi" version="1.1.2" targetFramework="net46" />
   <package id="Microsoft.OpenApi.Readers" version="1.1.2" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net46" />
   <package id="SharpYaml" version="1.6.4" targetFramework="net46" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="5.4.0" targetFramework="net461" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net46" />
   <package id="System.IO.Packaging" version="4.5.0" targetFramework="net46" />
   <package id="System.Windows.Interactivity.WPF" version="2.0.20525" targetFramework="net46" />
