--- a/CustomTools.Test/packages.config
+++ b/CustomTools.Test/packages.config
@@ -1,13 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Hummingbird.TestFramework" version="1.2.1109.1-prerelease" targetFramework="net461" />
-  <package id="Hummingbird.UI" version="1.2.1099.2" targetFramework="net461" />
-  <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.4.0" targetFramework="net461" />
-  <package id="Microsoft.IdentityModel.Logging" version="5.4.0" targetFramework="net461" />
-  <package id="Microsoft.IdentityModel.Tokens" version="5.4.0" targetFramework="net461" />
-  <package id="Microsoft.OpenApi" version="1.1.2" targetFramework="net46" />
-  <package id="Microsoft.OpenApi.Readers" version="1.1.2" targetFramework="net46" />
-  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net46" />
-  <package id="SharpYaml" version="1.6.4" targetFramework="net46" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="5.4.0" targetFramework="net461" />
+  <package id="Hummingbird.TestFramework" version="1.2.2161.6" targetFramework="net461" />
+  <package id="Hummingbird.UI" version="1.2.2327.2" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.8.0" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Logging" version="6.8.0" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Tokens" version="6.8.0" targetFramework="net461" />
+  <package id="Microsoft.OpenApi" version="1.2.3" targetFramework="net461" />
+  <package id="Microsoft.OpenApi.Readers" version="1.2.3" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
+  <package id="SharpYaml" version="1.6.6" targetFramework="net461" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="6.8.0" targetFramework="net461" />
 </packages>
